Optimize the Code and start Dockerfile